# math_project

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: main.cpp  main.hpp
src/core/: task2.cpp  task2.h  task5.cpp  task5.h
src/ui/: ui.cpp  ui.hpp
